# raylib_ant_colony_visualization

./: CMakeLists.txt  README.md
includes/: ants.h  foods.h  grid.h  pheromones.h  spawn.h
src/: ant.c  foods.c  grid.c  main.c  pheromones.c  spawn.c
